Made the engine FEEL/DMN APIs fully proto-native: FeelExpressionHandler now returns VariableValue DmnEvaluator now returns VariableValue Removed legacy engine-main JsonNode / VariablesDTO usage from: VariableScope ProcessInstanceProcessor ScopeProcessor FlowNodeInstanceProcessor call/subprocess/throw/user/external task processors signal/message subscription logic ProcessInstanceTriggerEnvelopeDeserializer engine model event-signal classes Moved the remaining DTO/Jackson conversion bridge out of taktx-engine into shared code: new shared helper: taktx-shared/src/main/java/io/taktx/variables/VariableValueDtoMapper.java removed the old engine-local VariableValueJsonMapper Updated MapStruct wiring so DTO boundaries still map cleanly without reintroducing legacy types in engine-main. Updated affected tests to use: proto-native VariableScope APIs VariableValue values in scope shared conversion helpers only where tests still want JsonNode-style assertions